update walnuts log

--- a/notes.org
+++ b/notes.org
@@ -298,7 +298,7 @@ start:
 **** 2020-11-16
 
 - Created a new block (Mine) from commandline, 
-  and saved it to walnutsdata.txt
+  and saved it to walnutsdata.json
 - Learned: always thinking in type system
 
 Test the sample code from [[https://serde.rs/][serde.rs]] 
@@ -360,11 +360,39 @@ deserialized data from walnutsdata.txt: Block { header: BlockHeader { prev_block
 check mine funtion: Ok(())
 #+end_src
 
-Change to "pretty" and print pretty output:
+Change to =serde_json::to_string_pretty=:
 
 #+begin_src rust
 let blockdata = serde_json::to_string_pretty(&block).unwrap();
+
+println!("write to walnutsdata.json");
+
+let f = File::create("walnutsdata.json")?;
+{
+    let mut buffer = BufWriter::new(f);
+
+    buffer.write_all(&blockdata.as_bytes())?;
+    buffer.flush()?;
+}
+
+let mut fout = File::open("walnutsdata.json")?;
+
+// future consideration: io & os performance
+// let mut buf_reader = BufReader::new(fout);
+
+let mut data = String::new();
+fout.read_to_string(&mut data)?;
+
+println!("read from walnutsdata.json in string: {}", &data);
+
+let deserialized: Block = serde_json::from_str(&data).unwrap();
+println!("deserialized data from walnutsdata.json: {:?}", deserialized);
+	
+Ok(())
+
 #+end_src
+
+The pretty output:
 
 #+begin_src shell
     Finished dev [unoptimized + debuginfo] target(s) in 1.08s
