--- a/notes.org
+++ b/notes.org
@@ -2055,6 +2055,7 @@ in this podcast.
 I only read Ayn Rand's book [[https://en.wikipedia.org/wiki/Atlas_Shrugged][Atlas Shrugged]] several years ago,
 and I loved it.
 
+A shot one [[https://www.youtube.com/watch?v=oC2nWeEhvcw][Ayn Rand doesn't have all the answers, but she has all the questions | Michael Malice]].
 
 I plan to reread [[https://www.goodreads.com/book/show/6454477-the-red-book][The Red Book]] from C.G. Jung
 and Friedrich Nietzsche's books.
